fix: spacing in the example

--- a/src/components/Example/SwitchingTabs/styles.module.css
+++ b/src/components/Example/SwitchingTabs/styles.module.css
@@ -1,5 +1,5 @@
 .w {
-  margin-top: 2rem;
+  margin: 2rem;
 }
 
 .list,
